# sdlpp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  sdlpp.hpp
examples/: Makefile.template
examples/pong/: main.cpp
examples/starfield/: Makefile  main.cpp
